<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Samsung Electronics Co., LTD
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_overlay"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="49.9dp"
        android:layout_height="49.9dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="19.5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:src="@drawable/bg_back_button_enabled_disabled" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                style="@style/StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/ic_eva"
                android:text="@string/sxr" />

            <ImageView
                android:id="@+id/ic_eva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_eva"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <TextView
            style="@style/StatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="43dp"
            android:text="@string/site"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:orientation="vertical"
            android:rowCount="1">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Title"
                    android:text="@string/developer" />

                <TextView
                    style="@style/Body_text"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/dev_team" />
            </GridLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:columnCount="3"
                android:gravity="center"
                android:orientation="vertical"
                android:rowCount="4">

                <TextView
                    style="@style/Title"
                    android:text="@string/designer" />

                <TextView
                    style="@style/Body_text"
                    android:layout_marginTop="10dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/designer_team" />

                <TextView
                    style="@style/Title"
                    android:layout_marginTop="20dp"
                    android:text="@string/qa_engineer" />

                <TextView
                    style="@style/Body_text"
                    android:layout_marginTop="5dp"
                    android:text="@string/susana_silva" />

                <TextView
                    style="@style/Title"
                    android:layout_marginStart="72dp"
                    android:text="@string/product_owner" />

                <TextView
                    style="@style/Body_text"
                    android:layout_marginStart="72dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/po_team" />

                <TextView
                    style="@style/Title"
                    android:layout_marginStart="72dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/project_leader" />

                <TextView
                    style="@style/Body_text"
                    android:layout_marginStart="72dp"
                    android:text="@string/pl_team" />

            </GridLayout>

        </GridLayout>

    </LinearLayout>

</RelativeLayout>