<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Samsung Electronics Co., LTD
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_overlay"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/toast_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/content_main"
        android:layout_alignStart="@id/content_main"
        android:visibility="invisible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/toast_photo" />

        <TextView
            style="@style/StatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="5dp"
            android:text="@string/photo_saved"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/content_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">

        <View
            android:id="@+id/photo_target"
            android:layout_width="301.8dp"
            android:layout_height="238.3dp"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22.1dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/StatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/want_to_share"
                android:textSize="16sp" />

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:columnCount="2"
                android:orientation="vertical"
                android:rowCount="4">

                <ImageView
                    android:id="@+id/button_instagram"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/bg_instagram_pressed_unpressed" />

                <TextView
                    style="@style/Body_text"
                    android:layout_marginTop="11dp"
                    android:text="@string/instagram"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <ImageView
                    android:id="@+id/button_whatsapp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="27dp"
                    android:src="@drawable/bg_whatsapp_pressed_unpressed" />

                <TextView
                    style="@style/Body_text"
                    android:layout_marginTop="11dp"
                    android:text="@string/whatsapp"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <ImageView
                    android:id="@+id/button_facebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="56dp"
                    android:src="@drawable/bg_facebook_pressed_unpressed" />

                <TextView
                    style="@style/Body_text"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/facebook"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

                <ImageView
                    android:id="@+id/button_twitter"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="56dp"
                    android:layout_marginTop="27dp"
                    android:src="@drawable/bg_twitter_pressed_unpressed" />

                <TextView
                    style="@style/Body_text"
                    android:layout_marginStart="62dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/twitter"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </GridLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="33.6dp">

                <Button
                    android:id="@+id/cancel_photo"
                    style="@style/Button"
                    android:text="@string/ok" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/photo_content"
        android:layout_width="340.6dp"
        android:layout_height="263.7dp"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/image_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_square"/>
        <TextView
            android:id="@+id/photo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StatusText"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name" />
    </RelativeLayout>

    <View
        android:id="@+id/view_flash"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="#FFFFFF" />

</RelativeLayout>